--- a/app/src/main/res/layout/title_layout.xml
+++ b/app/src/main/res/layout/title_layout.xml
@@ -6,6 +6,7 @@
     android:padding="16dp"
     android:id="@+id/title_card"
     app:cardCornerRadius="8dp"
+    android:backgroundTint="?attr/iconColor"
     app:cardElevation="8dp"
     android:foreground="?attr/selectableItemBackground"
     app:cardUseCompatPadding="true">
@@ -17,7 +18,7 @@
         android:layout_margin="20dp"
         android:text="@string/new_event"
         android:textAlignment="center"
-        android:textColor="?attr/textColor"
+        android:textColor="?attr/settings_text_color"
         android:textSize="20sp" />
 
 </androidx.cardview.widget.CardView>
