--- a/app/src/main/res/layout/create_user_name.xml
+++ b/app/src/main/res/layout/create_user_name.xml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="345dp"
-    android:background="@drawable/layout_bg"
     android:layout_height="wrap_content"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="8dp"
+    app:cardCornerRadius="8dp"
+    android:padding="12dp"
     android:layout_gravity="center">
 
-    <TextView
-        android:id="@+id/planner_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
-        android:textSize="30sp"
-        android:text="@string/planner"
-        android:textColor="?attr/textColor"/>
+    <include
+        android:id="@+id/title_card"
+        layout="@layout/title_layout" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:background="@drawable/layout_bg"
         android:padding="30dp">
 
         <com.google.android.material.textfield.TextInputLayout
@@ -32,7 +28,7 @@
             android:layout_marginBottom="20dp"
             android:hint="@string/you_name"
             android:padding="16dp"
-            android:textColorHint="@color/hint_color"
+            android:textColorHint="?attr/hint_color"
             app:boxStrokeColor="?attr/textColor"
             app:hintTextColor="?attr/textColor"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,30 +41,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine|textCapSentences"
+                android:maxLength="16"
                 android:maxLines="20"
                 android:textColor="?attr/textColor"
-                android:maxLength="16"
                 android:textStyle="bold" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <TextView
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/apply_btn"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/layout_bg"
-            android:foreground="?attr/selectableItemBackground"
-            android:padding="16dp"
-            android:text="@string/apply"
-            android:textColor="?attr/textColor"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText_wrapper"
-            tools:ignore="UnusedAttribute" />
+            android:layout_margin="10dp"
+            android:layout_marginVertical="10dp"
+            android:elevation="8dp"
+            android:text="@string/to_delete"
+            app:layout_constraintTop_toBottomOf="@id/editText_wrapper"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            app:backgroundTint="?attr/toolbarColor"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
