--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="12dp"
-    android:background="@color/windowBackground"
+    android:background="?attr/windowColor"
     tools:context=".ui.onboard.BoardFragment">
 
     <com.airbnb.lottie.LottieAnimationView
