--- a/app/src/main/res/layout/fragment_create_tasks.xml
+++ b/app/src/main/res/layout/fragment_create_tasks.xml
@@ -91,7 +91,7 @@
         app:layout_constraintBottom_toTopOf="@id/cr_editText"
         android:layout_marginBottom="40dp"
         custom:collapseStartDelay="3500"
-        custom:colorLeft="@color/green_light"
-        custom:colorRight="@android:color/holo_green_dark"
+        custom:colorLeft="@color/green_for_achievement"
+        custom:colorRight="@color/dark_green_for_achievement"
         custom:drawableLeft="@drawable/trophy"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
