--- a/app/src/main/res/layout/fragment_stand_up.xml
+++ b/app/src/main/res/layout/fragment_stand_up.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/plus_background"
+        android:backgroundTint="?attr/windowColor"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
