--- a/app/src/main/res/layout/long_click_dialog.xml
+++ b/app/src/main/res/layout/long_click_dialog.xml
@@ -18,12 +18,31 @@
             android:layout_height="match_parent"
             android:padding="12dp">
 
-            <include
+            <androidx.cardview.widget.CardView
                 android:id="@+id/title_card"
-                layout="@layout/title_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="?attr/iconColor"
+                android:foreground="?attr/selectableItemBackground"
+                android:padding="16dp"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="8dp"
+                app:cardUseCompatPadding="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:text="@string/choose_action"
+                    android:textAlignment="center"
+                    android:textColor="?attr/settings_text_color"
+                    android:textSize="20sp" />
+
+            </androidx.cardview.widget.CardView>
 
 
             <LinearLayout
@@ -32,13 +51,42 @@
                 android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@id/title_card">
 
-                <include
-                    android:id="@+id/delete_wrapper"
-                    layout="@layout/button_layout"/>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/delete_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_marginVertical="10dp"
+                    android:elevation="8dp"
+                    android:text="@string/to_delete"
+                    android:textAllCaps="false"
+                    android:textSize="16sp"
+                    app:backgroundTint="?attr/toolbarColor" />
 
-                <include
-                    android:id="@+id/edit_wrapper"
-                    layout="@layout/button_layout"/>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/edit_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_marginVertical="10dp"
+                    android:elevation="8dp"
+                    android:text="@string/edit"
+                    android:textAllCaps="false"
+                    android:textSize="16sp"
+                    app:backgroundTint="?attr/toolbarColor" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/third_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_marginVertical="10dp"
+                    android:elevation="8dp"
+                    android:text="@string/set_notification"
+                    android:visibility="gone"
+                    android:textAllCaps="false"
+                    android:textSize="16sp"
+                    app:backgroundTint="?attr/toolbarColor" />
 
             </LinearLayout>
 
