--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,13 +24,13 @@
             android:title="@string/ideas" />
         <item
             android:id="@+id/nav_finance"
-            android:icon="@drawable/ic_check"
+            android:icon="@drawable/ic_finance"
             android:title="@string/finance" />
 
 
         <item
             android:id="@+id/nav_settings"
-            android:icon="@drawable/fab_stopwatch"
+            android:icon="@drawable/ic_settings"
             android:title="@string/settings" />
     </group>
 
