--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,25 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="windowBackground">#FFFFFF</color>
-    <color name="toolbarBackground">#0365C4</color>
-    <color name="textColor">#0365C4</color>
-    <color name="editTextStrokeColor">#00E1FF</color>
     <color name="transparent">#00AF4C4C</color>
-    <color name="icon_color">#0365C4</color>
-    <color name="plus_background">#FFF</color>
-    <color name="bottom_navigation_background">#0365C4</color>
-    <color name="settings_text_color">#FFF</color>
-    <color name="hint_color">#AAA3A3</color>
-
-   <color name="night_blue">#162C53</color>
-    <color name="light_blue">#0365C4</color>
-    <color name="wp_green">#075E54</color>
-    <color name="pink">#E91E63</color>
-    <color name="yellow">#E8D637</color>
-    <color name="orange">#FF5722</color>
-    <color name="red">#F44336</color>
-    <color name="violet">#673AB7</color>
-    <color name="pale_purple">#3F51B5</color>
-    <color name="green_light">#8BC34A</color>
-    <color name="black">#000000</color>
+    <color name="green_for_achievement">#4CAF50</color>
+    <color name="dark_green_for_achievement">#317133</color>
 </resources>
