--- a/app/src/main/res/layout/fragment_finance.xml
+++ b/app/src/main/res/layout/fragment_finance.xml
@@ -110,7 +110,6 @@
                 android:id="@+id/income_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
                 android:background="?attr/iconColor"
                 android:text="@string/income"
                 android:textColor="?attr/settings_text_color" />
@@ -133,9 +132,8 @@
                 android:id="@+id/expenses_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="4dp"
                 android:background="?attr/iconColor"
-                android:text="Расход"
+                android:text="@string/expensive"
                 android:textColor="?attr/settings_text_color" />
 
         </androidx.cardview.widget.CardView>
@@ -226,7 +224,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="История"
+                    android:text="@string/history"
                     android:textColor="?attr/settings_text_color"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toBottomOf="parent"
