--- a/app/src/main/res/layout/fragment_focus.xml
+++ b/app/src/main/res/layout/fragment_focus.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.timing.TimingFragment">
+    tools:context=".ui.fragment.focus.FocusFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/timing_recycler"
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/timing_item" />
+        tools:listitem="@layout/focus_item" />
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/menu"
