--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -48,13 +48,14 @@
         android:layout_marginTop="30dp"
         app:cardElevation="8dp"
         app:cardUseCompatPadding="true"
+        android:backgroundTint="?attr/iconColor"
+        app:cardCornerRadius="8dp"
         app:layout_constraintTop_toBottomOf="@id/logo_wrapper">
 
         <LinearLayout
             android:id="@+id/change_theme_button"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:background="@drawable/rectangle_background"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
@@ -78,13 +79,14 @@
         android:layout_marginHorizontal="20dp"
         app:cardElevation="8dp"
         app:cardUseCompatPadding="true"
+        android:backgroundTint="?attr/iconColor"
+        app:cardCornerRadius="8dp"
         app:layout_constraintTop_toBottomOf="@id/theme_card">
 
         <LinearLayout
             android:id="@+id/change_language_layout"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:background="@drawable/rectangle_background"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
@@ -110,13 +112,14 @@
         android:layout_marginHorizontal="20dp"
         app:cardElevation="8dp"
         app:cardUseCompatPadding="true"
+        android:backgroundTint="?attr/iconColor"
+        app:cardCornerRadius="8dp"
         app:layout_constraintTop_toBottomOf="@id/language_card">
 
         <LinearLayout
             android:id="@+id/five_layout"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:background="@drawable/rectangle_background"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
