--- a/app/src/main/res/layout/fragment_finance.xml
+++ b/app/src/main/res/layout/fragment_finance.xml
@@ -4,11 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragment.finance.FinanceFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <com.cdev.achievementview.AchievementView
+            android:id="@+id/achievement_view"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:elevation="12dp"
+            app:layout_constraintTop_toTopOf="parent"
+            custom:collapseStartDelay="3500"
+            custom:colorLeft="@color/green_for_achievement"
+            custom:colorRight="@color/dark_green_for_achievement"
+            custom:drawableLeft="@drawable/trophy" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/advice_card_wrapper"
@@ -173,7 +185,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_marginStart="10dp"
-                    android:text="Шаблонные расходы"
+                    android:text="@string/template_expensive"
                     android:textColor="?attr/textColor"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -242,6 +254,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
