--- a/app/src/main/res/layout/item_langauge.xml
+++ b/app/src/main/res/layout/item_langauge.xml
@@ -2,24 +2,20 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/theme_background"
+    style="@style/cardStyle"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginVertical="6dp"
-    android:orientation="vertical"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="8dp"
-    app:cardUseCompatPadding="true">
+    android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/theme_color_tv"
+        android:id="@+id/language_tv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@drawable/rectangle_background"
         android:padding="12dp"
-        android:text="Оранжевый"
+        android:text="English"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
