--- a/app/src/main/res/layout/layout_target.xml
+++ b/app/src/main/res/layout/layout_target.xml
@@ -12,6 +12,7 @@
         android:background="@drawable/rectangle_bg"
         android:padding="18dp"
         android:text="@string/next"
+        android:fontFamily="@font/scope_one"
         android:textColor="?attr/settings_text_color"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,8 +26,9 @@
         android:textAlignment="center"
         android:textStyle="bold"
         android:padding="24dp"
+        style="@style/CommonStyle"
         android:text="@string/habit"
-        android:textColor="?attr/textColor"
+        android:textColor="?attr/settings_text_color"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
