--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -47,7 +47,7 @@
         android:maxLines="1"
         android:padding="8dp"
         android:singleLine="true"
-        android:text="Уровень"
+        android:text="@string/level"
         android:textColor="?attr/settings_text_color"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
